--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "json-server --watch db.json",
     "dev": "nodemon src/index.js"
   },
   "author": "",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "env-var": "^7.4.1"
+    "env-var": "^7.4.1",
+    "json-server": "^1.0.0-alpha.23"
   }
 }
